# git-annex-ria-remote

./: .gitattributes  .travis.yml  .zenodo.json  CHANGELOG  LICENSE  MANIFEST.in  Makefile  README.md  requirements-devel.txt  setup.cfg  setup.py
debian/: changelog  control  copyright  rules  watch
debian/source/: options
ria_remote/: __init__.py  _version.py  create_sibling_ria.py  export_archive.py  install.py  remote.py  utils.py  version.py
ria_remote/resources/procedures/: ria_post_install.py
ria_remote/tests/: test_basics.py  test_config.py  test_create_sibling.py  test_git_remote.py  test_gitannex.py  utils.py
tools/: prep-travis-forssh-sudo.sh  prep-travis-forssh.sh
