[metadata]
url = https://github.com/datalad/git-annex-ria-remote
author = Benjamin Poldrack
author_email =  benjaminpoldrack@gmail.com
maintainer = Benjamin Poldrack
maintainer_email =  benjaminpoldrack@gmail.com
description = Git-annex special remote implementation for (remote) indexed archives
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.5
install_requires =
    datalad == 0.12.0rc6
    annexremote
scripts =
  bin/git-annex-remote-ria
test_requires =
    nose
    coverage
packages = find:
include_package_data = True

[versioneer]
VCS = git
style = pep440
versionfile_source = ria_remote/_version.py
versionfile_build = ria_remote/_version.py
tag_prefix =
parentdir_prefix =
